style/style_domestica_summer.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height:1.5em;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*
*  Begin Domestica Structure Theme
*/
.domestica section, .domestica article, .domestica figure, .domestica figcaption, .domestica caption {
	margin:0;padding:0;
}
html, body.domestica {
	font-family: helvetica,arial,sans-serif;
	font-size:14px;
	font-weight:normal;
	color:#444;
	margin:0 auto;
}

.domestica a {
	text-decoration:none;
}

.domestica a:hover {
	text-decoration:underline;
}

.domestica p {
	margin-bottom:10px;
}

.domestica ul {
margin-left:20px;
padding-left:20px;
list-style:disc;
}

.domestica h1, .domestica h2, .domestica h3 {
	font-size:24px;
	font-weight:normal;
	margin:0 0 10px 0;
	padding:0;
	font-family:"adobe-garamond-pro-1","adobe-garamond-pro-2",serif;
}

.domestica div, .domestica ul, .domestica li, .domestica span, .domestica section, .domestica article {
	box-sizing:border-box;
}

/* header */
.domestica header {
	position:relative;
	height:74px;
	padding:30px 30px 31px 30px;
	border-bottom:solid 3px #eee;
}

.domestica header h1 {
	font-weight:normal;
	margin:0;
	padding:0 10px;
	margin-top:-87px;
	width:47%;
	position:absolute;
	right:30px;
	left:none;
	line-height:24px;
}

.domestica .allslidey header h1 {
	transition:left .5s;
	-moz-transition:left .5s;
	-webkit-transition:left .5s;
	-o-transition:left .5s;
}

@media (max-width: 1023px) {
	.domestica header h1 {
		font-size:97%;
		line-height: 20px;
		width:43%;
	}
}

@media (max-width: 600px) {
	.domestica header h1 {
		width:100%;
		position:relative;
		right:auto;
		margin-top:0px;
		padding:0;
		line-height:1.5em;
	}
	.domestica header {
		height:auto;
	}
}

.domestica header #logo {
	position:relative;
	height:75px;
	overflow:hidden;
	width:215px;
	margin:0;
	margin-bottom:10px;
}
.domestica header #logo .illustration {
	position:absolute;
	top:0px;
	left:0;
}
.domestica header #logo .illustration div {
	width:18px;
	height:18px;
	margin-top:1px;
	border-radius:3px;
}
.domestica header #logo .illustration div.first {
	margin-top:0;
}
.domestica header #logo .illustration .block-1 {background-color:#0988A9;}
.domestica header #logo .illustration .block-2 {background-color:rgba(118,118,118,1);}
.domestica header #logo .illustration .block-3 {background-color:rgba(79,79,79,1);}
.domestica header #logo .illustration .block-4 {background-color:rgba(28,28,28,1);}
.domestica header #logo h2 {
	font-size:47px;
	font-weight:500;
	padding:0;
	margin: 0 0 0 28px;
	position:absolute;
	left:0;
	top:0px;
	line-height:40px;
}

/* body */
.domestica section {
	padding:20px;
}
.domestica section article {
	padding:20px 0 5px 0;
	position:relative;
}
.domestica section article figure, .domestica section article figcaption{
	display:inline-block;
	vertical-align:top;
}
.domestica section article figure {
	width:640px;
}

.domestica section article figure img {
	border-radius:0 0 0 3px;
}

.domestica section article figcaption{
	width:489px;
	margin-left:20px;
}
.domestica section article figcaption p:last-child {
	margin-bottom:0;
}

.domestica section article figcaption .service_credit {
	padding:3px;
	font-weight:bold;
	font-family:georgia,garamond,serif;
}

.domestica section article figcaption .service_credit img {
	float:left;
	margin-top:-4px;
	padding-right:10px;
}

.domestica section h2 {
	top:0;
	left:660px;
	margin:0;
	padding:5px;
	font-weight:normal;
	display:inline-block;
	width:1169px;
	background-color:#eee;
	border-radius:3px 3px 0 0;
	display:none;
}

.domestica section h3 {
	margin-top:25px;
}

.domestica section p.subtle {
	color:rgba(125,125,125,1);
}

.domestica section .service_credit {
	position:absolute;
	bottom:4px; left:0;
	left:660px;
}

/* nav */
.domestica nav {
	padding:20px;
}

.domestica nav ul {
	margin:0;
	padding:0;
	width:100%;
}

.domestica nav ul li {
	display:inline-block;
	width:24%;
	max-width:24%;
	height:100px;
	vertical-align:top;
	color:#aaa;
	padding:10px;
	margin:0 0 0 0;
	list-style-type: none;
	border:solid 1px #fff;
	border-radius:3px;
	-webkit-transition:.3s background-color, .3s width;
	transition:.3s background-color, .3s width;
}

@media (max-width: 1023px) {
	.domestica nav ul li {
		width:49%;
		max-width:49%;
	}
}

@media (max-width: 600px) {
	.domestica nav ul li {
		width:100%;
		max-width:100%;
	}
}

.domestica nav ul li:hover {
	color:#333;
	border:solid 1px transparent;
	cursor:pointer;cursor:hand;
}

.domestica nav ul li a {
	font-size:24px;
	color:#333;
	font-family:"adobe-garamond-pro-1","adobe-garamond-pro",serif;

}

.domestica nav ul li:hover a {
	text-decoration:none;
}

/* footer */
.domestica footer {
	position:relative;
	padding:20px;
	border-top:solid 3px #eee;
	font-size:11px;
}

.domestica footer .cc-text {
	display:block;
	margin-left:100px;
	width:80%;
}

.domestica footer .cc-text p {
	padding:0;
	margin:0;
	position:absolute;
	top:-64px;
}

.domestica footer .cc-text {
	position:absolute;
}

/*
*  Begin Summer Color Theme for Domestica
*/
.summer nav ul li:hover {
	background-color: #0988A9;
}
.summer a {
	color:#0988A9;
}
.summer nav ul li:hover, .summer nav ul li:hover a {
	color:#fff;
}

/*
*  Blog post styles
*/

/* Latest post on homepage */
.latest-post {
	padding: 20px;
	margin-bottom: 20px;
	border-bottom: solid 3px #eee;
}

.latest-post h3 {
	font-size: 36px;
	margin-bottom: 10px;
	color: #333;
}

.latest-post h3 a {
	color: #333;
	text-decoration: none;
}

.latest-post h3 a:hover {
	color: #0988A9;
}

.post-meta {
	color: #999;
	font-size: 14px;
	margin-bottom: 20px;
}

.post-meta time {
	font-style: italic;
}

.more-posts-link {
	margin-top: 20px;
	font-size: 16px;
}

/* Blog archive page */
.blog-archive {
	padding: 20px;
}

.blog-archive h1 {
	font-size: 42px;
	margin-bottom: 30px;
}

.archive-post {
	margin-bottom: 30px;
	padding-bottom: 20px;
	border-bottom: solid 1px #eee;
}

.archive-post:last-child {
	border-bottom: none;
}

.archive-post time {
	color: #999;
	font-size: 12px;
	display: block;
	margin-bottom: 5px;
}

.archive-post h3 {
	margin: 5px 0 10px 0;
	font-size: 28px;
}

.archive-post p {
	color: #666;
}

/* Individual post page */
.post-content {
	padding: 20px;
	max-width: 900px;
	margin: 0 auto;
}

.post-header {
	margin-bottom: 30px;
}

.post-header h1 {
	font-size: 42px;
	margin-bottom: 10px;
}

.post-back-link {
	margin-top: 40px;
	padding-top: 20px;
	border-top: solid 1px #eee;
}

